Issue XWIKI-16341 " 'Add summary' input not aligned with 'Save' buttons " (#1257)
* 'Add Summary' input box is aligned with other buttons with `vertical-align: middle`

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/js/xwiki/actionbuttons/actionButtons.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/js/xwiki/actionbuttons/actionButtons.css
@@ -12,4 +12,5 @@
 
 #commentinput {
   width: inherit;
+  vertical-align: middle;
 }
